# sessions-sage

./: .gitignore  Makefile  README.md  RELEASE.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: release.yml
.omo/run-continuation/: ses_0c906722affeInc0ALceHAlYOj.json  ses_0e5e51655ffevYQ34qj5mkFtLl.json
app/: __init__.py  config.py  db.py  extractor.py  main.py  models.py  scheduler.py  summarizer.py  todo_scanner.py
app/static/: main.css
app/templates/: base.html  digests.html  index.html  notes.html  project.html  projects.html  session.html  todo-detail.html  todos.html
docs/: sessions-sage-lifecycle.html  sessions-sage.lifecycle.json
scripts/: release_notes.py
