[project]
name = "sessions-sage"
version = "0.2.0"
description = "OpenCode session summarizer and reflection dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
]

[project.scripts]
sessions-sage = "app.main:run"
sage = "app.main:run"

[tool.uv]
package = true

[dependency-groups]
dev = ["ruff>=0.11.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
